--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+:root {
+    --title-color: #c496ff;
+    --text-color: #693fa1;
+    --accent-one: #95e8e4;
+    --accent-two: #f6c4ff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: 'Press Start 2P', monospace;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--title-color);
+    background-color: var(--accent-two);
+    border-bottom: var(--accent-one) 20px double;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header h1 {
+    margin: 1em .4em;
 }
 
-.App-link {
-  color: #61dafb;
+header h1 span {
+    color: var(--accent-one);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main {
+    min-height: 30em;
+    display: flex;
+    padding-bottom: 10em;
+}
+
+.artistsList {
+    max-width: 20em;
+    margin-right: 2em;
+}
+
+.artistSelector {
+    cursor: pointer;
+    font-size: 1.2em;
+    color: white;
+    background-color: var(--text-color);
+    border-radius: .4em;
+    padding: .6em .6em;
+    margin: .6em .4em;
+}
+
+.artistSelector:hover {
+    background-color: var(--accent-one);
+}
+
+.artist {
+    flex-grow: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.artist h2 {
+    color: var(--title-color);
+}
+
+.info {
+    color: var(title-color);
+}
+
+.info p {
+    color: var(--text-color);
+}
+
+.records {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.record {
+    width: 20em;
+    padding: 1em;
+    margin: 1em 1em 0 0;
+    border: 1px solid var(--accent-two);
+    border-radius: .8em;
+}
+
+.record img {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+.recordControls {
+    margin: 2em 0;
+    text-align: right;
+}
+
+button {
+    cursor: pointer;
+    font-family: 'Press Start 2P', monospace;
+    color: var(--text-color);
+    background: var(--accent-one);
+    font-size: .8em;
+    border-radius: .4em;
+    padding: .6em .6em;
+    margin: .6em .4em;
+}
+
+p {
+    color: var(--text-color);
+}
+
+footer {
+    position: fixed;
+    background: white;
+    width: 100vw;
+    bottom: 0;
+    color: var(--text-color);
+    font-size: .7em;
+    padding: 2em 0 1em 0;
+    border-top: var(--accent-one) 7px dashed;
+}
+
+footer p {
+    margin: 0 2em 0 2em;
+    padding: 0;
+    line-height: 1.7em;
+}
+
+footer a {
+    text-decoration: none;
+    color: var(--accent-one);
+}
+
+footer a:hover {
+    color: var(--accent-two);
+}
+
+@media(max-width: 500px) {
+    header {
+        flex-direction: column;
+    }
+
+    .artistSelector {
+        font-size: .8em;
+    }
+
+    .record {
+        width: auto;
+    }
 }
